--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "swiper": "^11.0.4",
+    "swiper": "11.0.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vuex": "^4.0.2"
